--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -59,6 +59,28 @@
     transition: background-color .2s;
 }
 
-.countdownButton:hover {
+.countdownButton:not(:disabled):hover {
     background-color: var(--blue-dark);
+}
+
+.countdownButtonActive {
+    background: var(--white);
+    color: var(--title);
+}
+
+.countdownButtonActive:not(:disabled):hover {
+    background: var(--red);
+    color: var(--white);
+}
+
+.countdownButton:disabled {
+    background: var(--white);
+    color: var(--title);
+    border-bottom: 5px solid var(--green);
+}
+
+.countdownButton:disabled:hover {
+    background: var(--white);
+    color: var(--text);
+    cursor: not-allowed;
 }
