--- a/src/styles/components/ChallengeBox.module.css
+++ b/src/styles/components/ChallengeBox.module.css
@@ -90,7 +90,7 @@
     border: 0;
     border-radius: 5px;
 
-    color: var(--white);
+    color: #f7f7f7;
     font-size: 1rem;
     font-weight: 600;
 
