--- a/src/styles/components/ExperienceBar.module.css
+++ b/src/styles/components/ExperienceBar.module.css
@@ -20,6 +20,8 @@
     height: 4px;
     border-radius: 4px;
     background-color: var(--green);
+
+    transition: all 1s;
 }
 
 span.currentExperience {
